added sign in/up/out elements to nav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,16 +17,31 @@
   <body>
     <ul>
       <li>
-      <a href="/actors">Actors</a>
+        <a href="/actors">Actors</a>
       </li>
+
       <li>
-      <a href="/movies">Movies</a>
+        <a href="/movies">Movies</a>
       </li>
+
       <li>
-      <a href="/directors">Directors</a>
+        <a href="/directors">Directors</a>
       </li>
+
       <li>
-      <a href="/characters">Characters</a>
+        <a href="/characters">Characters</a>
+      </li>
+
+      <li>
+        <a href="/user_sign_up">Sign up</a>
+      </li>
+
+      <li>
+        <a href="/user_sign_in">Sign in</a>
+      </li>
+      
+      <li>
+        <a href="/user_sign_out">Sign out</a>
       </li>
     </ul>
 
