--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -4,6 +4,32 @@
       Movie #<%= @the_movie.id %> details
     </h1>
 
+    <hr>
+
+    <% matching_bookmarks = Bookmark.where({ :user_id => @current_user.id, :movie_id => @the_movie.id }) %>
+
+    <% the_bookmark = matching_bookmarks.at(0) %>
+
+    <% if the_bookmark != nil %>
+
+      <a href="/delete_bookmark/<%= the_bookmark.id %>">
+        Un-bookmark
+      </a>
+
+    <% else %>
+
+      <form action="/insert_bookmark_from_movie_show" method="post">
+        <input type="hidden" name="query_movie_id" value="<%= @the_movie.id %>">
+
+        <button>
+          Bookmark
+        </button>
+      </form>
+
+    <% end %>
+
+    <hr>
+
     <div>
       <div>
         <a href="/movies">
