--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -142,7 +142,7 @@
         </td>
 
         <td>
-          <%= a_movie.image %>
+          <img src="<%= a_movie.image %>" width="100">
         </td>
 
         <td>
