finished assignment wahoo!

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -6,29 +6,31 @@
 
     <hr>
 
-    <% matching_bookmarks = Bookmark.where({ :user_id => @current_user.id, :movie_id => @the_movie.id }) %>
+    <% if @current_user != nil %>
+      <% matching_bookmarks = Bookmark.where({ :user_id => @current_user.id, :movie_id => @the_movie.id }) %>
 
-    <% the_bookmark = matching_bookmarks.at(0) %>
+      <% the_bookmark = matching_bookmarks.at(0) %>
 
-    <% if the_bookmark != nil %>
+      <% if the_bookmark != nil %>
 
-      <a href="/delete_bookmark/<%= the_bookmark.id %>">
-        Un-bookmark
-      </a>
+        <a href="/delete_bookmark/<%= the_bookmark.id %>">
+          Un-bookmark
+        </a>
 
-    <% else %>
+      <% else %>
 
-      <form action="/insert_bookmark_from_movie_show" method="post">
-        <input type="hidden" name="query_movie_id" value="<%= @the_movie.id %>">
+        <form action="/insert_bookmark_from_movie_show" method="post">
+          <input type="hidden" name="query_movie_id" value="<%= @the_movie.id %>">
 
-        <button>
-          Bookmark
-        </button>
-      </form>
+          <button>
+            Bookmark this movie
+          </button>
+        </form>
 
+    
+        <hr>
+      <% end %>
     <% end %>
-
-    <hr>
 
     <div>
       <div>
